--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("http://fonts.googleapis.com/css?family=Merriweather+Sans:700,300");
-@import url("http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css");
+@import url("https://fonts.googleapis.com/css?family=Merriweather+Sans:700,300");
+@import url("https://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
